--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Standard-Api",
+  "name": "gmaechange-backend-Api",
   "version": "0.0.0",
-  "description": "Standard api",
+  "description": "Gamechange backend api",
   "main": "server.js",
   "private": true,
   "scripts": {
